--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SmartLoanDB;Trusted_Connection=True;"
+        "DefaultConnection": "Data Source=database.sqlite"
     },
     "JwtSettings": {
         "SecretKey": "Q9zXp7!pRt*DkL#3vU1&nE$zXyGmT@64"
